# Neural-Network

./: CMakeLists.txt  README.md
header/: DataReader.h  Layer.h  Math.h  Network.h  Optimizer.h
header/Operations/: BiasAdd.h  Loss.h  Operation.h  Sigmoid.h  WeightMultiply.h
src/: DataReader.cpp  Layer.cpp  Math.h  Network.cpp  Network.h  Optimizer.cpp  main.cpp
src/Operations/: BiasAdd.cpp  Loss.cpp  Operation.cpp  Sigmoid.cpp  WeightMultiply.cpp
